<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="Bill_Price">Listed Price</string>
    <string name="Tip_p">Tip %</string>
    <string name="Radio_Button">10%</string>
    <string name="Radio_Button_2">15%</string>
    <string name="Radio_Button_3">20%</string>
    <string name="Radio_Button_4">Custom</string>
    <string name="Custom_s">Custom</string>
    <string name="Current_Position"></string>
    <string name="Your_Tip">Your Tip</string>
    <string name="Your_Bill">Your Bill</string>
    <string name="Exit_p">Exit</string>
    <string name="Progress_p"></string>
    <string name="Initial_seekbar_progress">25</string>
    <string name="Initial">$0.00</string>

</resources>
